# MHP-2022

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data/: quickstart.nod.xml
data/ViennaOSM/: osm.bicycle.trips.xml  osm.motorcycle.trips.xml  osm.passenger.trips.xml  osm.pedestrian.trips.xml  osm.poly.xml  osm.polycfg
data/examples/2way-single-intersection/: single-intersection.sumocfg
data/examples/quickstart/: quickstart.con.xml  quickstart.net.xml  quickstart.rou.xml
data/osm-train-complex/: map.net.xml  map.osm  osm.trips.xml
data/osm-train-medium/: map.net.xml  map.osm  osm.rou.alt.xml  osm.rou.xml  osm.trips.xml
data/osm-train-simple/: map.net.xml  map.osm  osm.rou.alt.xml  osm.rou.xml  osm.sumocfg  osm.trips.xml
data/quickstart/: quickstart.typ.xml
data/vienna-osm/: build.bat  osm.bus.trips.xml  osm.netccfg  osm.pedestrian.rou.alt.xml  osm.pedestrian.rou.xml  osm.rail_urban.trips.xml  osm.sumocfg  osm.tram.trips.xml
frontend/: .gitlab-ci.yml  LICENSE  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  main.ts
frontend/src/components/: DashboardComponent.vue  HeaderComponent.vue  HomeComponent.vue  ItemComponent.vue  ItemsComponent.vue  ListenerComponent.vue  LoginComponent.vue  MainComponent.vue  ScenariosComponent.vue  SplashScreenComponent.vue
frontend/src/router/: index.ts
frontend/src/store/: datastore.ts
src/: main.py  main_dqn.py  main_q_learning.py
src/examples/: README.md  ql_2way-single-intersection.py  ql_single-intersection.py
(+6 files in other folders)
